corrected routes and made the body component fill with background-color if the component does not fit hte screen

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
-  /* text-align: center; */
-  /* background-color: #F5F5F5; */
+  background-color:black ; 
+}
+html, body {
+  height:100%;
+  background-color:black ; 
 }
 
 .App-logo {
@@ -16,7 +19,6 @@
 
 .App-header {
   font-family: 'Playfair Display';
-  /* background-color: #F5F5F5; */
   height: 5vmin;
   display: flex;
   flex-direction: column;
