--- a/src/components/CollapsedExcerpt/CollapsedExcerpt.module.css
+++ b/src/components/CollapsedExcerpt/CollapsedExcerpt.module.css
@@ -3,7 +3,6 @@
     font-family: 'Playfair Display';
     border-color: black;
     padding: 10px;
-    width: 100%;
     text-align: left;
 }
 .collapsable button {
